lib/parser/xpath.js
module.exports = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "AbbreviatedAxisSpecifier": parse_AbbreviatedAxisSpecifier,
        "AbbreviatedStep": parse_AbbreviatedStep,
        "AbsoluteLocationPath": parse_AbsoluteLocationPath,
        "AdditiveExpr": parse_AdditiveExpr,
        "AndExpr": parse_AndExpr,
        "AxisName": parse_AxisName,
        "AxisSpecifier": parse_AxisSpecifier,
        "BooleanFunctions": parse_BooleanFunctions,
        "Digits": parse_Digits,
        "EqualityExpr": parse_EqualityExpr,
        "ExprToken": parse_ExprToken,
        "ExprWhitespace": parse_ExprWhitespace,
        "FilterExpr": parse_FilterExpr,
        "FunctionCall": parse_FunctionCall,
        "FunctionName": parse_FunctionName,
        "Literal": parse_Literal,
        "LocationPath": parse_LocationPath,
        "MultiplicativeExpr": parse_MultiplicativeExpr,
        "MultiplyOperator": parse_MultiplyOperator,
        "Name": parse_Name,
        "NameChar": parse_NameChar,
        "NameStartChar": parse_NameStartChar,
        "NameTest": parse_NameTest,
        "NodeSetFunctions": parse_NodeSetFunctions,
        "NodeTest": parse_NodeTest,
        "NodeType": parse_NodeType,
        "Number": parse_Number,
        "NumberFunctions": parse_NumberFunctions,
        "Operator": parse_Operator,
        "OperatorName": parse_OperatorName,
        "OrExpr": parse_OrExpr,
        "PathExpr": parse_PathExpr,
        "Predicate": parse_Predicate,
        "PrimaryExpr": parse_PrimaryExpr,
        "RelationalExpr": parse_RelationalExpr,
        "RelativeLocationPath": parse_RelativeLocationPath,
        "Step": parse_Step,
        "StringFunctions": parse_StringFunctions,
        "UnaryExpr": parse_UnaryExpr,
        "UnionExpr": parse_UnionExpr,
        "VariableReference": parse_VariableReference,
        "XFormsCoreFunctions": parse_XFormsCoreFunctions,
        "XFormsFunctions": parse_XFormsFunctions,
        "XFormsFunctionsChangeContext": parse_XFormsFunctionsChangeContext,
        "XPath1CoreFunctions": parse_XPath1CoreFunctions,
        "start": parse_start,
        "xpath": parse_xpath
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var cacheKey = 'start@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result1 = parse_xpath();
        var result2 = result1 !== null
          ? (function(xpath) { return xpath; })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_xpath() {
        var cacheKey = 'xpath@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result1 = parse_LocationPath();
        var result2 = result1 !== null
          ? (function(lp) {
          		return lp; 
          	})(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_LocationPath() {
        var cacheKey = 'LocationPath@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result3 = parse_RelativeLocationPath();
        var result4 = result3 !== null
          ? (function(relativePath) {
          		var paths = [],
          			first = relativePath.shift();
          	
          		paths.push({
          			name: "path",
          			type: "relative",
          			step: first
          		});
          	
          		for (var i in relativePath) {
          			var v = relativePath[i];
          			paths.push({
          				name: "path",
          				type: v[0] == "/" ? "relative" : "absolute",
          				step: v[1]
          			});
          		}
          		return paths;
          	})(result3)
          : null;
        if (result4 !== null) {
          var result2 = result4;
        } else {
          var result2 = null;
          pos = savedPos0;
        }
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result1 = parse_AbsoluteLocationPath();
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AbsoluteLocationPath() {
        var cacheKey = 'AbsoluteLocationPath@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        var savedPos3 = pos;
        if (input.substr(pos, 2) === "//") {
          var result10 = "//";
          pos += 2;
        } else {
          var result10 = null;
          if (reportMatchFailures) {
            matchFailed("\"//\"");
          }
        }
        if (result10 !== null) {
          var result12 = parse_RelativeLocationPath();
          var result11 = result12 !== null ? result12 : '';
          if (result11 !== null) {
            var result8 = [result10, result11];
          } else {
            var result8 = null;
            pos = savedPos3;
          }
        } else {
          var result8 = null;
          pos = savedPos3;
        }
        var result9 = result8 !== null
          ? (function(absolutePath) {
          		var paths = [],
          			first = absolutePath.shift();
          			
          		paths.push({
          			name: "path",
          			type: "absolute",
          			step: first
          		});
          			
          		for (var i in absolutePath) {
          			var v = absolutePath[i];
          			paths.push({
          				name: "path",
          				type: v[0] == "/" ? "relative" : "absolute",
          				step: v[1]
          			});
          		}
          		return paths;
          	})(result8[1])
          : null;
        if (result9 !== null) {
          var result7 = result9;
        } else {
          var result7 = null;
          pos = savedPos2;
        }
        if (result7 !== null) {
          var result0 = result7;
        } else {
          var savedPos0 = pos;
          var savedPos1 = pos;
          if (input.substr(pos, 1) === "/") {
            var result4 = "/";
            pos += 1;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("\"/\"");
            }
          }
          if (result4 !== null) {
            var result6 = parse_RelativeLocationPath();
            var result5 = result6 !== null ? result6 : '';
            if (result5 !== null) {
              var result2 = [result4, result5];
            } else {
              var result2 = null;
              pos = savedPos1;
            }
          } else {
            var result2 = null;
            pos = savedPos1;
          }
          var result3 = result2 !== null
            ? (function(relativePath) {
            		var paths = [],
            			first = relativePath.shift();
            		
            		paths.push({
            			name: "path",
            			type: "relative",
            			step: first
            		});
            		
            		for (var i in relativePath) {
            			var v = relativePath[i];
            			paths.push({
            				name: "path",
            				type: v[0] == "/" ? "relative" : "absolute",
            				step: v[1]
            			});
            		}
            		return paths;
            	})(result2[1])
            : null;
          if (result3 !== null) {
            var result1 = result3;
          } else {
            var result1 = null;
            pos = savedPos0;
          }
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AbbreviatedStep() {
        var cacheKey = 'AbbreviatedStep@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 1) === ".") {
          var result2 = ".";
          pos += 1;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\".\"");
          }
        }
        if (result2 !== null) {
          var result0 = result2;
        } else {
          if (input.substr(pos, 2) === "..") {
            var result1 = "..";
            pos += 2;
          } else {
            var result1 = null;
            if (reportMatchFailures) {
              matchFailed("\"..\"");
            }
          }
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AbbreviatedAxisSpecifier() {
        var cacheKey = 'AbbreviatedAxisSpecifier@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 1) === "@") {
          var result1 = "@";
          pos += 1;
        } else {
          var result1 = null;
          if (reportMatchFailures) {
            matchFailed("\"@\"");
          }
        }
        var result0 = result1 !== null ? result1 : '';
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_RelativeLocationPath() {
        var cacheKey = 'RelativeLocationPath@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_Step();
        if (result3 !== null) {
          var result4 = [];
          var savedPos2 = pos;
          if (input.substr(pos, 1) === "/") {
            var result9 = "/";
            pos += 1;
          } else {
            var result9 = null;
            if (reportMatchFailures) {
              matchFailed("\"/\"");
            }
          }
          if (result9 !== null) {
            var result6 = result9;
          } else {
            if (input.substr(pos, 2) === "//") {
              var result8 = "//";
              pos += 2;
            } else {
              var result8 = null;
              if (reportMatchFailures) {
                matchFailed("\"//\"");
              }
            }
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result6 = null;;
            };
          }
          if (result6 !== null) {
            var result7 = parse_Step();
            if (result7 !== null) {
              var result5 = [result6, result7];
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          } else {
            var result5 = null;
            pos = savedPos2;
          }
          while (result5 !== null) {
            result4.push(result5);
            var savedPos2 = pos;
            if (input.substr(pos, 1) === "/") {
              var result9 = "/";
              pos += 1;
            } else {
              var result9 = null;
              if (reportMatchFailures) {
                matchFailed("\"/\"");
              }
            }
            if (result9 !== null) {
              var result6 = result9;
            } else {
              if (input.substr(pos, 2) === "//") {
                var result8 = "//";
                pos += 2;
              } else {
                var result8 = null;
                if (reportMatchFailures) {
                  matchFailed("\"//\"");
                }
              }
              if (result8 !== null) {
                var result6 = result8;
              } else {
                var result6 = null;;
              };
            }
            if (result6 !== null) {
              var result7 = parse_Step();
              if (result7 !== null) {
                var result5 = [result6, result7];
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(firstNode, restNodes) {
          		restNodes.unshift(firstNode);
          		return restNodes;
          	})(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Step() {
        var cacheKey = 'Step@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result5 = parse_AxisSpecifier();
        if (result5 !== null) {
          var result6 = parse_NodeTest();
          if (result6 !== null) {
            var result7 = [];
            var result8 = parse_Predicate();
            while (result8 !== null) {
              result7.push(result8);
              var result8 = parse_Predicate();
            }
            if (result7 !== null) {
              var result3 = [result5, result6, result7];
            } else {
              var result3 = null;
              pos = savedPos1;
            }
          } else {
            var result3 = null;
            pos = savedPos1;
          }
        } else {
          var result3 = null;
          pos = savedPos1;
        }
        var result4 = result3 !== null
          ? (function(specifier, test, predicates) {
          		return {
          			name: "step",
          			specifier: specifier,
          			test: test,
          			predicates: predicates 
          		};
          	})(result3[0], result3[1], result3[2])
          : null;
        if (result4 !== null) {
          var result2 = result4;
        } else {
          var result2 = null;
          pos = savedPos0;
        }
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result1 = parse_AbbreviatedStep();
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AxisSpecifier() {
        var cacheKey = 'AxisSpecifier@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result3 = parse_AxisName();
        if (result3 !== null) {
          if (input.substr(pos, 2) === "::") {
            var result4 = "::";
            pos += 2;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("\"::\"");
            }
          }
          if (result4 !== null) {
            var result2 = [result3, result4];
          } else {
            var result2 = null;
            pos = savedPos0;
          }
        } else {
          var result2 = null;
          pos = savedPos0;
        }
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result1 = parse_AbbreviatedAxisSpecifier();
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AxisName() {
        var cacheKey = 'AxisName@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 8) === "ancestor") {
          var result13 = "ancestor";
          pos += 8;
        } else {
          var result13 = null;
          if (reportMatchFailures) {
            matchFailed("\"ancestor\"");
          }
        }
        if (result13 !== null) {
          var result0 = result13;
        } else {
          if (input.substr(pos, 16) === "ancestor-or-self") {
            var result12 = "ancestor-or-self";
            pos += 16;
          } else {
            var result12 = null;
            if (reportMatchFailures) {
              matchFailed("\"ancestor-or-self\"");
            }
          }
          if (result12 !== null) {
            var result0 = result12;
          } else {
            if (input.substr(pos, 9) === "attribute") {
              var result11 = "attribute";
              pos += 9;
            } else {
              var result11 = null;
              if (reportMatchFailures) {
                matchFailed("\"attribute\"");
              }
            }
            if (result11 !== null) {
              var result0 = result11;
            } else {
              if (input.substr(pos, 5) === "child") {
                var result10 = "child";
                pos += 5;
              } else {
                var result10 = null;
                if (reportMatchFailures) {
                  matchFailed("\"child\"");
                }
              }
              if (result10 !== null) {
                var result0 = result10;
              } else {
                if (input.substr(pos, 10) === "descendant") {
                  var result9 = "descendant";
                  pos += 10;
                } else {
                  var result9 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"descendant\"");
                  }
                }
                if (result9 !== null) {
                  var result0 = result9;
                } else {
                  if (input.substr(pos, 18) === "descendant-or-self") {
                    var result8 = "descendant-or-self";
                    pos += 18;
                  } else {
                    var result8 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"descendant-or-self\"");
                    }
                  }
                  if (result8 !== null) {
                    var result0 = result8;
                  } else {
                    if (input.substr(pos, 9) === "following") {
                      var result7 = "following";
                      pos += 9;
                    } else {
                      var result7 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"following\"");
                      }
                    }
                    if (result7 !== null) {
                      var result0 = result7;
                    } else {
                      if (input.substr(pos, 17) === "following-sibling") {
                        var result6 = "following-sibling";
                        pos += 17;
                      } else {
                        var result6 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"following-sibling\"");
                        }
                      }
                      if (result6 !== null) {
                        var result0 = result6;
                      } else {
                        if (input.substr(pos, 9) === "namespace") {
                          var result5 = "namespace";
                          pos += 9;
                        } else {
                          var result5 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"namespace\"");
                          }
                        }
                        if (result5 !== null) {
                          var result0 = result5;
                        } else {
                          if (input.substr(pos, 6) === "parent") {
                            var result4 = "parent";
                            pos += 6;
                          } else {
                            var result4 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"parent\"");
                            }
                          }
                          if (result4 !== null) {
                            var result0 = result4;
                          } else {
                            if (input.substr(pos, 9) === "preceding") {
                              var result3 = "preceding";
                              pos += 9;
                            } else {
                              var result3 = null;
                              if (reportMatchFailures) {
                                matchFailed("\"preceding\"");
                              }
                            }
                            if (result3 !== null) {
                              var result0 = result3;
                            } else {
                              if (input.substr(pos, 17) === "preceding-sibling") {
                                var result2 = "preceding-sibling";
                                pos += 17;
                              } else {
                                var result2 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\"preceding-sibling\"");
                                }
                              }
                              if (result2 !== null) {
                                var result0 = result2;
                              } else {
                                if (input.substr(pos, 4) === "self") {
                                  var result1 = "self";
                                  pos += 4;
                                } else {
                                  var result1 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\"self\"");
                                  }
                                }
                                if (result1 !== null) {
                                  var result0 = result1;
                                } else {
                                  var result0 = null;;
                                };
                              };
                            };
                          };
                        };
                      };
                    };
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_NodeTest() {
        var cacheKey = 'NodeTest@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result10 = parse_NameTest();
        if (result10 !== null) {
          var result0 = result10;
        } else {
          var savedPos1 = pos;
          var result7 = parse_NodeType();
          if (result7 !== null) {
            if (input.substr(pos, 1) === "(") {
              var result8 = "(";
              pos += 1;
            } else {
              var result8 = null;
              if (reportMatchFailures) {
                matchFailed("\"(\"");
              }
            }
            if (result8 !== null) {
              if (input.substr(pos, 1) === ")") {
                var result9 = ")";
                pos += 1;
              } else {
                var result9 = null;
                if (reportMatchFailures) {
                  matchFailed("\")\"");
                }
              }
              if (result9 !== null) {
                var result6 = [result7, result8, result9];
              } else {
                var result6 = null;
                pos = savedPos1;
              }
            } else {
              var result6 = null;
              pos = savedPos1;
            }
          } else {
            var result6 = null;
            pos = savedPos1;
          }
          if (result6 !== null) {
            var result0 = result6;
          } else {
            var savedPos0 = pos;
            if (input.substr(pos, 22) === "processing-instruction") {
              var result2 = "processing-instruction";
              pos += 22;
            } else {
              var result2 = null;
              if (reportMatchFailures) {
                matchFailed("\"processing-instruction\"");
              }
            }
            if (result2 !== null) {
              if (input.substr(pos, 1) === "(") {
                var result3 = "(";
                pos += 1;
              } else {
                var result3 = null;
                if (reportMatchFailures) {
                  matchFailed("\"(\"");
                }
              }
              if (result3 !== null) {
                var result4 = parse_Literal();
                if (result4 !== null) {
                  if (input.substr(pos, 1) === ")") {
                    var result5 = ")";
                    pos += 1;
                  } else {
                    var result5 = null;
                    if (reportMatchFailures) {
                      matchFailed("\")\"");
                    }
                  }
                  if (result5 !== null) {
                    var result1 = [result2, result3, result4, result5];
                  } else {
                    var result1 = null;
                    pos = savedPos0;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Predicate() {
        var cacheKey = 'Predicate@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        var savedPos3 = pos;
        if (input.substr(pos, 1) === "[") {
          var result10 = "[";
          pos += 1;
        } else {
          var result10 = null;
          if (reportMatchFailures) {
            matchFailed("\"[\"");
          }
        }
        if (result10 !== null) {
          var result11 = parse_Name();
          if (result11 !== null) {
            if (input.substr(pos, 1) === "=") {
              var result19 = "=";
              pos += 1;
            } else {
              var result19 = null;
              if (reportMatchFailures) {
                matchFailed("\"=\"");
              }
            }
            if (result19 !== null) {
              var result12 = result19;
            } else {
              if (input.substr(pos, 2) === "!=") {
                var result18 = "!=";
                pos += 2;
              } else {
                var result18 = null;
                if (reportMatchFailures) {
                  matchFailed("\"!=\"");
                }
              }
              if (result18 !== null) {
                var result12 = result18;
              } else {
                if (input.substr(pos, 1) === "<") {
                  var result17 = "<";
                  pos += 1;
                } else {
                  var result17 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"<\"");
                  }
                }
                if (result17 !== null) {
                  var result12 = result17;
                } else {
                  if (input.substr(pos, 2) === "<=") {
                    var result16 = "<=";
                    pos += 2;
                  } else {
                    var result16 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"<=\"");
                    }
                  }
                  if (result16 !== null) {
                    var result12 = result16;
                  } else {
                    if (input.substr(pos, 1) === ">") {
                      var result15 = ">";
                      pos += 1;
                    } else {
                      var result15 = null;
                      if (reportMatchFailures) {
                        matchFailed("\">\"");
                      }
                    }
                    if (result15 !== null) {
                      var result12 = result15;
                    } else {
                      var result12 = null;;
                    };
                  };
                };
              };
            }
            if (result12 !== null) {
              var result13 = parse_Name();
              if (result13 !== null) {
                if (input.substr(pos, 1) === "]") {
                  var result14 = "]";
                  pos += 1;
                } else {
                  var result14 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"]\"");
                  }
                }
                if (result14 !== null) {
                  var result8 = [result10, result11, result12, result13, result14];
                } else {
                  var result8 = null;
                  pos = savedPos3;
                }
              } else {
                var result8 = null;
                pos = savedPos3;
              }
            } else {
              var result8 = null;
              pos = savedPos3;
            }
          } else {
            var result8 = null;
            pos = savedPos3;
          }
        } else {
          var result8 = null;
          pos = savedPos3;
        }
